Табы без использования js

--- a/code/parts/_head.jade
+++ b/code/parts/_head.jade
@@ -2,13 +2,14 @@ head
 	title Landing page for Fe
 	+styles('../css/style.css')
 
-	+script('https://code.jquery.com/ui/1.11.3/jquery-ui.min.js')
+	+script('https://code.jquery.com/ui/1.11.3/jquery-ui.min.js', 'https://code.jquery.com/jquery-1.10.2.js')
 
 	meta(charset="utf8")
 
 	meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
 
 	link(rel="icon" type="image/x-icon" href="../img/favicon.ico")
+
 
 
 
