--- a/css/_mainScreen.less
+++ b/css/_mainScreen.less
@@ -2,7 +2,7 @@
     width: 100%;
     height: 103rem;
     max-width: 100%;
-    color: #fff;
+    color: @white;
     position: relative;
     overflow: hidden;
 
@@ -32,11 +32,11 @@
     .treangle{
         width: 63rem;
         height: 16rem;
-        background: #00ccff;
+        background: @blue;
         shape-outside: polygon(0% 35%, 100% 0%, 100% 100%, 30% 55%);
         clip-path: polygon(0% 35%, 100% 0%, 100% 100%, 30% 55%);
         position: absolute;
-        top: 853px;
+        top: 85.3rem;
         right: 0;
         z-index: -999;
 
@@ -80,7 +80,7 @@
     }
 
     .mouse {
-        border: 3px solid #ffffff;
+        border: 3px solid @white;
         border-radius: 23px;
         bottom: 20rem;
         display: block;
@@ -96,7 +96,7 @@
         	animation-iteration-count: infinite;
         	animation-name: scroll;
         	background: none repeat scroll 0 0;
-        	border: 3px solid #ffffff;
+        	border: 3px solid @white;
         	border-radius: 10px;
         	display: block;
         	height: 17px;
