--- a/code/parts/_about.jade
+++ b/code/parts/_about.jade
@@ -1,6 +1,48 @@
-h1 About Us
-p What We Do With Love
+.content_block
+	.tit
+		h1 About 
+			i Us
+		p What We Do With Love
 
-p
-	|Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpat amet sodales, porttitor bibendum facilisi suspendisse
+	.descript
+		img(src="../img/lines.svg")
 
+		p
+			|Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpat amet sodales, porttitor bibendum facilisi suspendisse
+
+	section.tabs
+		input(id="tab_1" type="radio" name="tab" checked="checked")
+		input(id="tab_2" type="radio" name="tab")
+		input(id="tab_3" type="radio" name="tab")
+
+		label(for="tab_1" id="tab_l1")
+			|Welcome
+		label(for="tab_2" id="tab_l2")
+			|Vision
+		label(for="tab_3" id="tab_l3")
+			|Mission
+		div(style="clear:both")
+
+		.tabs_cont
+			#tab_c1
+				p.title 100% Money Back
+				p.text.
+					aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				p.title 100% Money Back
+				p.text.
+					aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				p.title 100% Money Back
+				p.text.
+					aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				p.title 100% Money Back
+				p.text.
+					aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+			#tab_c2
+				p
+					|Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
+			#tab_c3
+				p
+					|Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
