--- a/css/_header.less
+++ b/css/_header.less
@@ -42,10 +42,10 @@ header{
 
                 a{
                     text-decoration: none;
-                    color: #fff;
+                    color: @white;
 
                     &:hover{
-                        border-bottom: 1px solid #fff;
+                        border-bottom: 1px solid @white;
                     }
                 }
 
