Второй блок информации

--- a/code/parts/_about.jade
+++ b/code/parts/_about.jade
@@ -4,11 +4,11 @@
 			i Us
 		p What We Do With Love
 
-	.descript
-		img(src="../img/lines.svg")
+		.descript
+			img(src="../img/lines.svg")
 
-		p
-			|Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpat amet sodales, porttitor bibendum facilisi suspendisse
+			p
+				|Lorem ipsum dolor sit amet, libero turpis non cras ligula, id commodo, aenean est in volutpat amet sodales, porttitor bibendum facilisi suspendisse
 
 	section.tabs
 		input(id="tab_1" type="radio" name="tab" checked="checked")
@@ -25,24 +25,74 @@
 
 		.tabs_cont
 			#tab_c1
-				p.title 100% Money Back
-				p.text.
-					aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
 
-				p.title 100% Money Back
-				p.text.
-					aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
 
-				p.title 100% Money Back
-				p.text.
-					aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
 
-				p.title 100% Money Back
-				p.text.
-					aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
 			#tab_c2
-				p
-					|Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
 			#tab_c3
-				p
-					|Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
+
+				.block
+					i
+					p.title 100% Money Back
+					p.text.
+						aliquam ipsum ante morbi sed ipsum mollis. Sollicitudin viverra, vel varius eget sit mollis.
