--- a/css/_header.less
+++ b/css/_header.less
@@ -35,6 +35,7 @@ header{
                 display: inline-block;
                 font-size: 1.6rem;
                 padding: 1.5rem;
+                transition: .2s;
 
                 &:last-child{
                     padding-right: 0;
