--- a/css/_about.less
+++ b/css/_about.less
@@ -2,60 +2,76 @@
 	width: 90%;
 	margin: 0 auto;
 	margin-top: 13rem;
+	margin-bottom: 5rem;
+	overflow: hidden;
 
-	.descript{
-		display: inline-block;
-		margin: 0 4rem;
-		margin-left: 7rem;
-		vertical-align: text-top;
+	.tit{
+		display: block;
+		max-width: 90%;
+		margin: 0 auto;
 
-		img{
-			margin-right: 3rem;
-			float: left;
-			position: relative;
-    		top: -5rem;
+		&:after{
+			content: "";
+			display: block;
+			width: 100%;
+			clear: both;
+		}
+
+		h1{
+			.latoBold;
+			font-size: 3rem;
+			text-transform: uppercase;
+			color: @blue;
+			margin: 0;
+
+			i{
+				color: @orange;
+				font-style: normal;
+			}
 		}
 
 		p{
 			.lato;
-			font-size: 1.6rem;
-			line-height: 125%;
-			max-width: 70rem;
+			font-size: 1.8rem;
+			color: @gray;
+			font-style: italic;
+		}
+
+		.descript{
+			display: inline-block;
+			margin: 0 4rem;
+			margin-left: 7rem;
+			vertical-align: text-top;
+			float: right;
+
+			img{
+				margin-right: 3rem;
+				float: left;
+				position: relative;
+	    		top: -5rem;
+			}
+
+			p{
+				.lato;
+				font-style: normal;
+				font-size: 1.6rem;
+				line-height: 125%;
+				max-width: 70rem;
+			}
 		}
 	}
 }
 
-.tit{
-	display: inline-block;
-
-	h1{
-		.latoBold;
-		font-size: 3rem;
-		text-transform: uppercase;
-		color: @blue;
-		margin: 0;
-
-		i{
-			color: @orange;
-			font-style: normal;
-		}
-	}
-
-	p{
-		.lato;
-		font-size: 1.8rem;
-		color: @gray;
-		font-style: italic;
-	}
-}
 
 
 // Стили для табов
 .tabs {
+	display: block;
 	position: relative;
 	margin: 0 auto;
 	width: 100%;
-	max-width: 96rem;
+	max-width: 90%;
+	margin-top: 2.5rem;
 
 	label {
 		color: @gray;
@@ -64,10 +80,13 @@
 		height: 5.5rem;
 		line-height: 5.5rem;
 		text-align: center;
-		.lato;
+		.latoIt;
 		font-size: 2rem;
 		text-transform: uppercase;
 		cursor: pointer;
+		background: url(../img/tab_gray.svg) no-repeat top center;
+		margin-right: -2.3rem;
+		transition: .5s;
 	}
 
 	input {
@@ -79,18 +98,105 @@
 #tab_1:checked  ~ #tab_l1,
 #tab_2:checked  ~ #tab_l2,
 #tab_3:checked  ~ #tab_l3 {
-	background: @white;
-	border-color: @white;
+	background: url(../img/tab.svg) no-repeat top center;
 	top: 0;
 	z-index: 3;
 	cursor: pointer;
+	color: @white;
 }
 
 .tabs_cont {
 	background: #fff;
 	position: relative;
 	z-index: 2;
-	height: 230px;
+	height: 30rem;
+	margin: 9.5rem 0;
+
+	.block{
+		display: inline-block;
+		width: 45%;
+		height: 17.5rem;
+		padding: 3.5rem;
+		box-sizing: border-box;
+
+		&:nth-child(odd){
+			padding-left: 0;
+			border-right: 1px solid @light-gray;
+		}
+
+		&:nth-child(even){
+			padding-right: 0;
+		}
+
+		i{
+			display: inline-block;
+			width: 12.5rem;
+			height: 10.5rem;
+			float: left;
+			margin-right: 2rem;
+		}
+
+		&:first-child{
+			border-bottom: 1px solid @light-gray;
+
+			i{
+				background-image: url(../img/icons/icons.png);
+				background-position: 0 -420px;
+				background-repeat: no-repeat;
+
+				&:hover{
+					background-position: 0 -525px;
+				}
+			}
+		}
+
+		&:nth-child(2){
+			border-bottom: 1px solid @light-gray;
+
+			i{
+				background-image: url(../img/icons/icons.png);
+				background-position: 0 -210px;
+				background-repeat: no-repeat;
+
+				&:hover{
+					background-position: 0 -315px;
+				}
+			}
+		}
+
+		&:nth-child(3) i{
+			background-image: url(../img/icons/icons.png);
+			background-position: 0 -630px;
+			background-repeat: no-repeat;
+
+			&:hover{
+				background-position: 0 -735px;
+			}
+		}
+
+		&:last-child i{
+			background-image: url(../img/icons/icons.png);
+			background-position: 0 -0px;
+			background-repeat: no-repeat;
+
+			&:hover{
+				background-position: 0 -105px;
+			}
+		}
+
+		p{
+			&.title{
+				.latoBold;
+				font-size: 2rem;
+				margin: 1rem 0;
+			}
+
+			&.text{
+				.lato;
+				font-size: 1.6rem;
+			}
+		}
+	}
 }
 
 .tabs_cont > div {
