Блок со скилами. Анимированные svg графики

--- a/code/index.jade
+++ b/code/index.jade
@@ -6,5 +6,6 @@ html(lang="ru")
 		include parts/_header
 		include parts/_mainScreen
 		include parts/_about
+		include parts/_skils
 		//- include parts/_body
 		include parts/_footer
