--- a/css/style.less
+++ b/css/style.less
@@ -23,6 +23,8 @@
 @orange: #ff9900;
 @gray: #333;
 @light-gray: #eaeaea;
+@back-gray: #f7f7f7;
+@text-gray: #999999;
 
 html{
 	font-size: 62.5%;
@@ -36,5 +38,6 @@ html{
 @import url(_header.less);
 @import url(_mainScreen.less);
 @import url(_about.less);
+@import url(_skils.less);
 
 
